Cleanup mount code and codeql

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -62,7 +62,6 @@ jobs:
       uses: github/codeql-action/init@v3
       with:
         languages: ${{ matrix.language }}
-
         # If you wish to specify custom queries, you can do so here or in a config file.
         # By default, queries listed here will override any specified in a config file.
         # Prefix the list here with "+" to use these queries and those in the config file.
@@ -86,7 +85,7 @@ jobs:
       if: matrix.language == 'go' && matrix.os == 'ubuntu-latest'
       run: |-
         sudo apt-get update
-        sudo apt-get install fuse libfuse-dev -y
+        sudo apt-get install fuse3 libfuse3-dev -y
     
     - name: Build go binary
       if: matrix.language == 'go'
@@ -95,3 +94,5 @@ jobs:
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
+      with:
+        category: "/language:${{matrix.language}}"
