--- a/setup/baseConfig.yaml
+++ b/setup/baseConfig.yaml
@@ -105,6 +105,7 @@ file_cache:
   create-empty-file: true|false <create an empty file on container when create call is received from kernel>
   allow-non-empty-temp: true|false <allow non empty temp directory at startup. Set true to persist local cache across reboots.>
   cleanup-on-start: true|false <cleanup the temp directory on startup, if it's not empty>
+  block-offline-access: true|false <stop local file accesses while cloud storage is inaccessible>
   policy-trace: true|false <generate eviction policy logs showing which files will expire soon>
   offload-io: true|false <by default libfuse will service reads/writes to files for better perf. Set to true to make file-cache component service read/write calls.>
   sync-to-flush: true|false <sync call to a file will force upload of the contents to storage account. Default - true>
