Add new flag "usage-from-cache"

--- a/setup/baseConfig.yaml
+++ b/setup/baseConfig.yaml
@@ -88,7 +88,7 @@ block_cache:
   disk-size-mb: <maximum disk cache size allowed. Default - 80% of free disk space>
   disk-timeout-sec: <default disk cache eviction timeout (in sec). Default - 120 sec>
   prefetch: <number of blocks to be prefetched in serial read case. Min - 11, Default - 2 times number of CPU cores>
-  parallelism: <number of parallel threads downloading the data and writing to disk cache. Default - 3 times number of CPU cores> 
+  parallelism: <number of parallel threads downloading the data and writing to disk cache. Default - 3 times number of CPU cores>
   prefetch-on-open: true|false <prefetch blocks on open. This shall be used only when user application is going to read file from offset 0>
 
 # Disk cache related configuration
@@ -102,6 +102,7 @@ file_cache:
   max-size-mb: <maximum cache size allowed. Default - 80% of free disk space>
   high-threshold: <% disk space consumed which triggers eviction. This parameter overrides 'timeout-sec' parameter and cached files will be removed even if they have not expired. Default - 80>
   low-threshold: <% disk space consumed which triggers eviction to stop when previously triggered by the high-threshold. Default - 60>
+  usage-from-cache: true|false <use file cache to report drive size and storage statistics (StatFs)>
   create-empty-file: true|false <create an empty file on container when create call is received from kernel>
   allow-non-empty-temp: true|false <allow non empty temp directory at startup. Set true to persist local cache across reboots.>
   cleanup-on-start: true|false <cleanup the temp directory on startup, if it's not empty>
