--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -174,7 +174,7 @@ jobs:
 
       - name: Set Version
         id: get_version
-        run: echo "VERSION=$(echo ${REF_NAME} | tr -d 'v')" >> $GITHUB_OUTPUT
+        run: echo "VERSION=${REF_NAME#v}" >> $GITHUB_OUTPUT
         env:
           REF_NAME: ${{ github.ref_name }}
 
@@ -248,7 +248,7 @@ jobs:
 
       - name: Set Version
         id: get_version
-        run: echo "VERSION=$(echo ${REF_NAME} | tr -d 'v')" >> $GITHUB_OUTPUT
+        run: echo "VERSION=${REF_NAME#v}" >> $GITHUB_OUTPUT
         env:
           REF_NAME: ${{ github.ref_name }}
 
