--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -37,6 +37,16 @@ jobs:
         with:
           persist-credentials: false
 
+      - name: Set Version
+        id: get_version
+        run: echo"VERSION=${REF_NAME#v}" >> $GITHUB_OUTPUT
+        env:
+          REF_NAME: ${{ github.ref_name }}
+
+      - name: Echo test
+        run: |
+         echo "${{ steps.get_version.outputs.VERSION }}"
+
       - name: Install Go
         uses: actions/setup-go@v5
         with:
@@ -98,7 +108,7 @@ jobs:
           localstack start -d                       # Start LocalStack in the background
 
           echo "Waiting for LocalStack startup..."  # Wait 20 seconds for the LocalStack container
-          localstack wait -t 20                     # to become ready before timing out 
+          localstack wait -t 20                     # to become ready before timing out
           echo "Startup complete"
 
       - name: Install Azurite
