--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -133,6 +133,7 @@ jobs:
 
       - name: Set Version
         id: get_version
+        shell: bash
         run: echo "VERSION=${REF_NAME#v}" >> $GITHUB_OUTPUT
         env:
           REF_NAME: ${{ github.ref_name }}
