--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,22 +2,15 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
+      - id: check-docstring-first
       - id: check-executables-have-shebangs
+      - id: check-merge-conflict
       - id: check-shebang-scripts-are-executable
       - id: check-yaml
+      - id: double-quote-string-fixer
       - id: end-of-file-fixer
       - id: mixed-line-ending
       - id: no-commit-to-branch
+      - id: requirements-txt-fixer
       - id: trailing-whitespace
         args: [--markdown-linebreak-ext=md]
-
-  - repo: https://github.com/rhysd/actionlint
-    rev: v1.7.6
-    hooks:
-      - id: actionlint
-
-  - repo: https://github.com/woodruffw/zizmor-pre-commit
-    rev: v1.1.1
-    hooks:
-      - id: zizmor
-        args: [--min-severity=low]
