--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -33,7 +33,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-          cache: "pip"
 
       - name: Install pip dependencies
         if: ${{ ! steps.restore-compiled-gui.outputs.cache-hit }}
@@ -82,6 +81,7 @@ jobs:
         with:
           go-version: ${{ env.go }}
           check-latest: true
+          cache: false
 
       - name: Set CGO
         shell: bash
@@ -149,7 +149,9 @@ jobs:
 
       - name: Rename installer
         run: |
-          mv build/Output/cloudfuse.exe build/Output/cloudfuse_${{ steps.get_version.outputs.VERSION }}_windows_amd64.exe
+          mv build/Output/cloudfuse.exe build/Output/cloudfuse_${VERSION}_windows_amd64.exe
+        env:
+          VERSION: ${{ steps.get_version.outputs.VERSION }}
 
       - name: Run Inno Setup for No Gui
         working-directory: ./build
@@ -161,7 +163,9 @@ jobs:
 
       - name: Rename installer No Gui
         run: |
-          mv build/Output/cloudfuse.exe build/Output/cloudfuse_no_gui_${{ steps.get_version.outputs.VERSION }}_windows_amd64.exe
+          mv build/Output/cloudfuse.exe build/Output/cloudfuse_no_gui_${VERSION}_windows_amd64.exe
+        env:
+          VERSION: ${{ steps.get_version.outputs.VERSION }}
 
       - name: Cache windows installer
         uses: actions/cache/save@v4
@@ -217,6 +221,7 @@ jobs:
         with:
           go-version: ${{ env.go }}
           check-latest: true
+          cache: false
 
       - name: Set Version
         id: get_version
