--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -149,9 +149,7 @@ jobs:
 
       - name: Rename installer
         run: |
-          mv build/Output/cloudfuse.exe build/Output/cloudfuse_${VERSION}_windows_amd64.exe
-        env:
-          VERSION: ${{ steps.get_version.outputs.VERSION }}
+          mv build/Output/cloudfuse.exe build/Output/cloudfuse_${{ steps.get_version.outputs.VERSION }}_windows_amd64.exe
 
       - name: Run Inno Setup for No Gui
         working-directory: ./build
@@ -163,9 +161,7 @@ jobs:
 
       - name: Rename installer No Gui
         run: |
-          mv build/Output/cloudfuse.exe build/Output/cloudfuse_no_gui_${VERSION}_windows_amd64.exe
-        env:
-          VERSION: ${{ steps.get_version.outputs.VERSION }}
+          mv build/Output/cloudfuse.exe build/Output/cloudfuse_no_gui_${{ steps.get_version.outputs.VERSION }}_windows_amd64.exe
 
       - name: Cache windows installer
         uses: actions/cache/save@v4
