Initial commit for size tracking

--- a/internal/component.template
+++ b/internal/component.template
@@ -26,11 +26,12 @@
 package <component>
 
 import (
-	"cloudfuse/common/config"
-	"cloudfuse/common/log"
-	"cloudfuse/internal"
 	"context"
 	"fmt"
+
+    "github.com/Seagate/cloudfuse/common/config"
+	"github.com/Seagate/cloudfuse/common/log"
+	"github.com/Seagate/cloudfuse/internal"
 )
 
 /* NOTES:
