--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -161,30 +161,6 @@ jobs:
           sudo fusermount -u ${{ env.MOUNT_DIR }}
           sleep 5
 
-      - name: Create Config File - Block Blob with Size Tracker
-        env:
-          NIGHTLY_STO_ACC_NAME: "${{ secrets.NIGHTLY_STO_BLOB_ACC_NAME }}"
-          NIGHTLY_STO_ACC_KEY: "${{ secrets.NIGHTLY_STO_BLOB_ACC_KEY }}"
-          ACCOUNT_TYPE: block
-          ACCOUNT_ENDPOINT: https://${{ secrets.NIGHTLY_STO_BLOB_ACC_NAME }}.blob.core.windows.net
-          VERBOSE_LOG: false
-          USE_HTTP: false
-        run: "./cloudfuse.test -test.v -test.coverprofile=${{ env.WORK_DIR }}/cloudfuse_gentest1.cov gen-test-config --config-file=azure_key_size_tracker.yaml --container-name=${{ matrix.containerName }} --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_CFG }}"
-
-      - name: Block Blob Coverage with Size Tracker
-        run: |-
-          rm -rf ${{ env.MOUNT_DIR }}/*
-          rm -rf ${{ env.TEMP_DIR }}/*
-          ./cloudfuse.test -test.v -test.coverprofile=${{ env.WORK_DIR }}/cloudfuse_block.cov mount ${{ env.MOUNT_DIR }} --config-file=${{ env.cloudfuse_CFG }} --foreground=true &
-          sleep 10
-          ps -aux | grep cloudfuse
-          rm -rf ${{ env.MOUNT_DIR }}/*
-          cd test/e2e_tests
-          go test -v -timeout=7200s ./... -args -mnt-path=${{ env.MOUNT_DIR }} -tmp-path=${{ env.TEMP_DIR }}
-          cd -
-          sudo fusermount -u ${{ env.MOUNT_DIR }}
-          sleep 5
-
       - name: Create Config File - ADLS
         env:
           NIGHTLY_STO_ACC_NAME: "${{ secrets.AZTEST_ADLS_ACC_NAME }}"
@@ -275,6 +251,15 @@ jobs:
           cd -
           sudo fusermount -u ${{ env.MOUNT_DIR }}
           sleep 5
+
+      - name: Cleanup S3 Storage before size tracker test
+        run: go test -timeout 120m -v test/s3cleanup/s3cleanup_test.go
+        env:
+          AWS_ACCESS_KEY_ID: "${{ secrets.S3TEST_ACCESS_KEY }}"
+          AWS_SECRET_ACCESS_KEY: "${{ secrets.S3TEST_SECRET_KEY }}"
+          S3_BUCKET_NAME: "${{ secrets.S3TEST_BUCKET_NAME }}"
+          S3_ENDPOINT: "${{ secrets.S3TEST_ENDPOINT }}"
+          S3_KEY_ID: "${{ secrets.S3TEST_ACCESS_KEY }}"
 
       - name: Create Config File - S3 with Size Tracker
         env:
@@ -1094,3 +1079,12 @@ jobs:
         env:
           STORAGE_ACCOUNT_NAME: "${{ secrets.AZTEST_ADLS_ACC_NAME }}"
           STORAGE_ACCOUNT_Key: "${{ secrets.AZTEST_ADLS_KEY }}"
+
+      - name: Cleanup S3 Storage
+        run: go test -timeout 120m -v test/s3cleanup/s3cleanup_test.go
+        env:
+          AWS_ACCESS_KEY_ID: "${{ secrets.S3TEST_ACCESS_KEY }}"
+          AWS_SECRET_ACCESS_KEY: "${{ secrets.S3TEST_SECRET_KEY }}"
+          S3_BUCKET_NAME: "${{ secrets.S3TEST_BUCKET_NAME }}"
+          S3_ENDPOINT: "${{ secrets.S3TEST_ENDPOINT }}"
+          S3_KEY_ID: "${{ secrets.S3TEST_ACCESS_KEY }}"
