--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -225,7 +225,7 @@ jobs:
           sleep 10
           ps -aux | grep cloudfuse
           cd test/e2e_tests
-          go test -v -timeout=7200s ./... -args -mnt-path=${{ env.MOUNT_DIR }} -tmp-path=${{ env.TEMP_DIR }} -s3storage=true
+          go test -v -timeout=7200s ./... -args -mnt-path=${{ env.MOUNT_DIR }} -tmp-path=${{ env.TEMP_DIR }} -size-tracker=true
           cd -
           sudo fusermount -u ${{ env.MOUNT_DIR }}
           sleep 5
@@ -278,7 +278,7 @@ jobs:
           sleep 10
           ps -aux | grep cloudfuse
           cd test/e2e_tests
-          go test -v -timeout=7200s ./... -args -mnt-path=${{ env.MOUNT_DIR }} -tmp-path=${{ env.TEMP_DIR }} -s3storage=true
+          go test -v -timeout=7200s ./... -args -mnt-path=${{ env.MOUNT_DIR }} -tmp-path=${{ env.TEMP_DIR }} -size-tracker=true
           cd -
           sudo fusermount -u ${{ env.MOUNT_DIR }}
           sleep 5
@@ -807,6 +807,37 @@ jobs:
           pid=`ps -a | grep cloudfuse | tr -s ' ' | cut -d ' ' -f2`
           cd test/e2e_tests
           go test -v -timeout=7200s ./... -args -mnt-path=${{ env.MOUNT_DIR }} -tmp-path=${{ env.TEMP_DIR }} -quick-test=true -stream-direct-test=true
+          cd -
+          kill $pid
+          sleep 5
+
+      - name: Cleanup S3 Storage before size tracker test
+        run: go test -timeout 120m -v test/s3cleanup/s3cleanup_test.go
+        env:
+          AWS_ACCESS_KEY_ID: "${{ secrets.S3TEST_ACCESS_KEY }}"
+          AWS_SECRET_ACCESS_KEY: "${{ secrets.S3TEST_SECRET_KEY }}"
+          S3_BUCKET_NAME: "${{ secrets.S3TEST_BUCKET_NAME }}"
+          S3_ENDPOINT: "${{ secrets.S3TEST_ENDPOINT }}"
+          S3_KEY_ID: "${{ secrets.S3TEST_ACCESS_KEY }}"
+
+      - name: Create Config File - S3 with Size Tracker
+        env:
+          S3_BUCKET_NAME: "${{ secrets.S3TEST_BUCKET_NAME }}"
+          S3_ENDPOINT: "${{ secrets.S3TEST_ENDPOINT }}"
+          S3_KEY_ID: "${{ secrets.S3TEST_ACCESS_KEY }}"
+          S3_REGION: "${{ secrets.S3TEST_REGION }}"
+          S3_SECRET_KEY: "${{ secrets.S3TEST_SECRET_KEY }}"
+        run: "./cloudfuse.test gen-test-config --config-file=s3_key_size_tracker.yaml --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_CFG }}"
+
+      - name: S3 Coverage with Size Tracker
+        run: |-
+          rm -rf ${{ env.MOUNT_DIR }}/*
+          rm -rf ${{ env.TEMP_DIR }}/*
+          ./cloudfuse.test -test.v -test.coverprofile=${{ env.WORK_DIR }}/cloudfuse_s3.cov mount ${{ env.MOUNT_DIR }} --config-file=${{ env.cloudfuse_CFG }} --foreground=true &
+          sleep 10
+          pid=`ps -a | grep cloudfuse | tr -s ' ' | cut -d ' ' -f2`
+          cd test/e2e_tests
+          go test -v -timeout=7200s ./... -args -mnt-path=${{ env.MOUNT_DIR }} -tmp-path=${{ env.TEMP_DIR }} -quick-test=true -stream-direct-test=true -size-tracker=true
           cd -
           kill $pid
           sleep 5
