Fix windows code coverage error

--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -816,9 +816,9 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: "${{ secrets.S3TEST_ACCESS_KEY }}"
           AWS_SECRET_ACCESS_KEY: "${{ secrets.S3TEST_SECRET_KEY }}"
+          AWS_REGION: "${{ secrets.S3TEST_REGION }}"
           S3_BUCKET_NAME: "${{ secrets.S3TEST_BUCKET_NAME }}"
           S3_ENDPOINT: "${{ secrets.S3TEST_ENDPOINT }}"
-          S3_KEY_ID: "${{ secrets.S3TEST_ACCESS_KEY }}"
 
       - name: Create Config File - S3 with Size Tracker
         env:
