--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Install libfuse on Linux
         shell: bash
         run: |
-          sudo apt-get install ${{ matrix.fuselib }}
+          sudo apt-get install fuse3 ${{ matrix.fuselib }}
 
       - name: Build
         run: |
@@ -198,7 +198,7 @@ jobs:
       - name: Install libfuse on Linux
         shell: bash
         run: |
-          sudo apt-get install libfuse3-dev
+          sudo apt-get install fuse3 libfuse3-dev
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
