Fix issue when building script with fuse2

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -75,10 +75,10 @@ jobs:
 
       - name: Build
         run: |
-          if [ "${{ matrix.job_name }}" == "linux-fuse2" ]; then
-            ./build.sh -fuse2
+          if [[ "${{ matrix.job_name }}" == "linux-fuse2" ]]; then
+            ./build.sh -fuse2;
           else
-            ./build.sh
+            ./build.sh;
           fi
 
       - name: Create Azure Configuration File on Linux
